fix dark mode code style

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -60,7 +60,6 @@ blockquote
 
 code
   border-radius: 5px
-  background-color: #f5f5f5
   max-width: 100%
   overflow-x: auto
 
